Bugfix: Mesh gradient not responding to first invocation

BUG:445617